# Inference_Segmentation_CPP

./: CMakeLists.txt  README.md
include/: SegNet_libtorch.h  SegNet_openvino.h
models/: README.md  model_dict.txt
src/: SegNet_libtorch.cpp  SegNet_openvino.cpp
user_manual/: chinese_simplified.md
user_manual/chinese_simplified/: README.md
user_manual/onnx_python_sample/: onnxInferenceTest_CPU_only.py  openvinoInferenceTest_Hybird.py
